--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.env
+
 # local env files
 .env*
 
@@ -34,4 +36,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+.env
 .env
