--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "lucide-react": "^0.265.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.3",
     "next": "13.4.9",
@@ -18,6 +19,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
   }
 }
