--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptai",
+  "name": "promptomania",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,5 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19"
   }
 }
